# pdbtbx

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  changelog.md  clippy.toml  deny.toml
.github/workflows/: code_coverage.yml  create_octo_diagram.yml  rust.yml
.github/workflows/config/: grcov.yml
benches/: E_coli.rs  benchmark.py  benchmark.rs  benchmark_results.csv  transformation.py
example-pdbs/: 1yyf.cif  3nig.cif  3pdz.cif  6wlb.cif  rosetta_model.cif
examples/: errors.rs  selection.rs  sphere.rs  waterbox.rs
pictures/: support_overview.xlsx
src/: errorlevel.rs  lexitem.rs  lib.rs  main.rs  parser.rs  parsercombinators.rs  parsing_level.rs  reference_tables.rs  save.rs  strictness_level.rs  structs.rs  transformation.rs  validate.rs
src/error/: context.rs  errorlevel.rs  mod.rs  parseerror.rs  pdberror.rs
src/general_docs/: mod.rs
src/parser/: lexitem.rs  mod.rs  parser.rs
src/read/: general.rs  lexitem.rs  mod.rs  parse_cif.rs  parser.rs  read_options.rs
src/read/cif/: lexer.rs  lexitem.rs  mod.rs  parser.rs
src/read/mmcif/: lexer.rs  lexitem.rs  parser.rs
src/read/pdb/: lexer.rs  lexitem.rs  mod.rs  parser.rs  temporary_structs.rs  utils.rs  validate.rs
src/reference/: crystal_transformations.txt  hall_symbols.txt  hermann_mauguin_symbols.txt
src/save/: general.md  general.rs  mmcif.rs  mod.rs  pdb.rs  pdbx.rs
src/structs/: atom.rs  atom_with_hierarchy.rs  atom_with_hierarchy_mut.rs  bond.rs  chain.rs  conformer.rs  database_reference.rs  elements.rs  find.rs  full_hierarchy.rs  general.md  helper.rs  hierarchy.rs  mod.rs  model.rs  mtrix.rs  origx.rs  pdb.rs  residue.rs  scale.rs  search.rs  symmetry.rs  traits.rs  unit_cell.rs
tests/: atom_serial_number_id.rs  atomic_only.rs  clipped.rs  duplicate_hydrogens.rs  ignore_hydrogens.rs  insertion_codes.rs  low_b.rs  multi_model.rs  open_mmcif_dic.rs  parsing_level.rs  read_write_pdbs.rs  sphere.rs  waterbox.rs  wrapping_atom_number.rs  wrapping_residue_number.rs
