[package]
name = "pdbtbx"
version = "0.10.2"
authors = ["Douwe Schulte <d.schulte@uu.nl>"]
license = "MIT"
edition = "2021"
description = "A library to open/edit/save (crystallographic) Protein Data Bank (PDB) and mmCIF files."
repository = "https://github.com/douweschulte/pdbtbx"
readme = "README.md"
keywords = ["pdb", "crystal", "protein", "mmcif", "bio"]
categories = ["parser-implementations", "science"]
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
rstar = { version = "0.11", optional = true}
serde = { version = "~1.0", optional = true, features = ["derive"] }
rayon = {version = "1", optional = true}
doc-cfg = "0.1"
indexmap = "1.8"

[dev-dependencies]
serde_json = "~1.0"

[features]
default = ["rayon", "rstar", "serde"]
unstable-doc-cfg = []

[package.metadata.docs.rs]
all-features = true

[profile.dev]
opt-level = 3

[[bench]]
name = "benchmark"
harness = false
path = "benches/benchmark.rs"
